Section title left side block now hidden when not editing to fix misaligned text wrapping of two line section titles like those in the main QLD Sales Registration course.

--- a/theme/academy_clean/style/course.css
+++ b/theme/academy_clean/style/course.css
@@ -53,3 +53,6 @@ li.activity.label,
 .editing_duplicate {
     display: none;
 }
+
+.left.side{display:none}
+.editing .left.side{display:inline}
